kubernetes/neo4j-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: neo4j
  labels:
    app: neo4j
spec:
  serviceName: "neo4j-service"
  replicas: 1
  selector:
    matchLabels:
      app: neo4j
  template:
    metadata:
      labels:
        app: neo4j
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "7474"
    spec:
      enableServiceLinks: false
      securityContext:
        fsGroup: 7474
        runAsUser: 7474
        runAsNonRoot: true
      containers:
      - name: neo4j
        image: neo4j:5.18.0
        ports:
        - containerPort: 7687
          name: bolt
        - containerPort: 7474
          name: http
        startupProbe:
          tcpSocket:
            port: 7687
          initialDelaySeconds: 15
          periodSeconds: 5
          failureThreshold: 20
        readinessProbe:
          tcpSocket:
            port: 7687
          initialDelaySeconds: 5
          periodSeconds: 10
        resources:
          requests:
            cpu: "500m"
            memory: "1Gi"
          limits:
            cpu: "2000m"
            memory: "3Gi"
        volumeMounts:
        - name: neo4j-pvc
          mountPath: /data
  volumeClaimTemplates:
  - metadata:
      name: neo4j-pvc
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: standard-rwo
      resources:
        requests:
          storage: 20Gi
