kubernetes/neo4j-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: neo4j-service
  labels:
    app: neo4j
spec:
  ports:
  - port: 7687
    targetPort: 7687
    name: bolt
  - port: 7474
    targetPort: 7474
    name: http
  selector:
    app: neo4j
