kubernetes/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: streamlit-virtualservice
spec:
  hosts:
  - "neo4j-poc.example.com"
  gateways:
  - default-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: streamlit-service
        port:
          number: 8501
